# hello-world

./: .gitignore  Readme.MD  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
hello/: cli.py
tests/: test_cli.py
