[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Timothy Brantley II <tbrantleyii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
hello = "hello:cli"