[tool.poetry]
name = "hello"
version = "0.2.0"
description = ""
authors = ["Timothy Brantley II <tbrantleyii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
hello = "hello:cli"